    * some rearranging of parser creation, and removed redundant members from CommandLineOptions
    * moved the discovery of info_map's file type to svnTree.py
    * added ConfigVar.resolved_num to help track which var is used in which command.
    * PlatformSpecificHelper's var_assign got new param: comment
    * Many optimizations to SVNItem code.
    * Using cStringIO instead of StringIO.

29/1/2014 0.8.0 Shai Shasag <shai@waves.com>

    Main 0.8.0 features:
    * Create and check signature for info_map.txt file

    user visible changes, client:
    * using STAGING_FOLDER, SVN_CHECKOUT_FOLDER, SVN_CLIENT_PATH, DOWNLOAD_TOOL_PATH, CHECKSUM_TOOL_PATH instead of __STAGING_FOLDER__ , __SVN_FOLDER__, __RESOLVED_SVN_CLIENT_PATH__, __RESOLVED_DOWNLOAD_TOOL_PATH__, __RESOLVED_CHECKSUM_TOOL_PATH__
    * wtar files are expanded during sync not during copy
    * Fixed unwtar for Windows
    * InstlInstanceSync_url.read_remote_info_map checks signature against public key.
    * If file to download is already present, no not check checksum in batch file.    user visible changes, client:
    * option --config_file renamed --config-file, for easy typing experience
    * added some missing command help text.

    user visible changes, admin:
    * new command svn2stage, to prepare folders for entering changes
    * new command wtar, to proparly tar what needs to be tared
    * new command createkeys
    * up_repo_rev calculates sig for info_map.txt if INFO_MAP_SIG is defined in config file.
    * new command make-sig creates sha1 checksum and rsa signature for a file, needs private key.
    * new command check-sig checks sha1 checksum and rsa signature for a file, needs public key.
    * command up_repo_rev renamed up-repo-rev, for easy typing experience
    * command fix_props renamed fix-props, for easy typing experience
    * command fix_symlinks renamed fix-symlinks, for easy typing experience
    * command createlinks renamed create-links, for easy typing experience.